<resources>
    <string name="app_name">Keepy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_kindergarten">Welcome to %1$s\'s kindergarten</string>
    <string name="menu_home">Home</string>
    <string name="menu_details">Details</string>
    <string name="menu_history">Notifications history</string>
    <string name="menu_camera">Camera</string>
    <string name="בית">Home</string>
    <string name="פרטים">Details</string>
    <string name="התראה">Notifications history</string>
    <string name="מצלמה">Camera</string>
    <string name="password">Password</string>
    <string name="the_name_of_the_garden">The name of the garden</string>
    <string name="register">Register</string>
    <string name="Username">Username\n</string>
    <string name="Register">Register</string>
    <string name="keepy">Keepy</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="make_notificaion">Make notificaion</string>
    <string name="make_notification">make_notification</string>
    <string name="some_data_here">Some data here</string>
    <string name="Email">Email\n</string>
    <string name="phone_number">Phone number</string>
    <string name="the_name_of_kindergarten">The name of kindergarten</string>
    <string name="add">Add</string>
    <string name="my_kindergartens">My Kindergartens</string>
    <string name="no_kindergartens_available">No kindergartens available</string>
    <string name="log_out">Log Out</string>
    <string name="makeNotification">make notification</string>
    <string name="time_icon">Time Icon</string>
    <string name="time">Time: </string>
    <string name="id_icon">ID Icon</string>
    <string name="id">ID:</string>
    <string name="event_type_icon">Event Type Icon</string>
    <string name="event_type">Event Type:  </string>
    <string name="kindergarten_icon">Kindergarten Icon</string>
    <string name="kindergarten">Kindergarten: </string>
    <string name="word_icon">Word Icon</string>
    <string name="word_detected">Word Detected: </string>
    <string name="timestamp">Timestamp:  </string>
    <string name="detected_word">Detected Word:  </string>
    <string name="add_a_new_kindergarten">Add a new kindergarten </string>
    <string name="good_morning">Good Morning,</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="sound">Sound</string>
    <string name="home">Home</string>

    <string name="rewind">Rewind</string>
    <string name="previous">Previous</string>
    <string name="play_stop">Play/Stop</string>
    <string name="next">Next</string>
    <string name="fast_forward">Fast Forward</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="parent">Parent</string>
    <string name="kindergarten_name">Kindergarten Name:</string>
    <string name="kindergartener_s_phone">Kindergartener\'s phone:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="event_types">
        <item>All Events</item>
        <item>curse word detected</item>
        <item>inappropriate sentence detected</item>
        <item>crying detected</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

</resources>