<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <TextView
            android:id="@+id/tvEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_type"
            android:textColor="@color/myColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="8dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/timestamp"
            android:textColor="@color/myColor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_timestamp"
            android:drawablePadding="8dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:id="@+id/tvDetectedWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/detected_word"
            android:textColor="@color/myColor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="8dp"
            android:textAlignment="viewStart"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
