<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".app.activity.homePageScreen.AddKindergartenActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/addKindergarten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/add_a_new_kindergarten"
                android:textAlignment="center"
                android:textColor="@color/colorRegister"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/kindergartenName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_children"
                android:drawablePadding="8dp"
                android:hint="@string/the_name_of_kindergarten"
                android:textStyle="bold"
                android:textSize="17sp"
                android:fontFamily="casual"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_password1"
                android:drawablePadding="8dp"
                android:textSize="17sp"
                android:hint="@string/password"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/addKindergartenButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorRegister"
                android:text="@string/add"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


            <TextView
                android:id="@+id/textGoToHomePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Go to home page"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textColor="@color/colorRegister"
                tools:ignore="RtlHardcoded" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:foregroundTint="#A36E6E"
            android:padding="10sp"
            card_view:srcCompat="@drawable/kindergarten5"
            app:shapeAppearanceOverlay="@style/RoundedCornersImageView"/>




    </LinearLayout>




</LinearLayout>